--- a/code/my/my.ipynb
+++ b/code/my/my.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "UnstructuredMarkdownLoader(')"
+    "UnstructuredMarkdownLoader('/root/LLM/data/科目一驾校宝典1853题.doc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(openai_api_key=\"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\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm.invoke(\"how can langsmith help with testing?\")"
    ]
   }
  ],
