--- a/code/JiaoTong/First.ipynb
+++ b/code/JiaoTong/First.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 1,
-=======
    "execution_count": 2,
->>>>>>> 803b73bf59c89a6fb428b03496f8c3a94d4388aa
-=======
-   "execution_count": 2,
->>>>>>> 803b73bf59c89a6fb428b03496f8c3a94d4388aa
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,39 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "UnstructuredMarkdownLoader('/root/LLM/data/科目一驾校宝典1853题.doc')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'docs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext_splitter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RecursiveCharacterTextSplitter\n\u001b[1;32m      3\u001b[0m text_splitter \u001b[38;5;241m=\u001b[39m RecursiveCharacterTextSplitter(\n\u001b[1;32m      4\u001b[0m     chunk_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m, chunk_overlap\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m150\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m split_docs \u001b[38;5;241m=\u001b[39m text_splitter\u001b[38;5;241m.\u001b[39msplit_documents(\u001b[43mdocs\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'docs' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
-    "llm = ChatOpenAI(openai_api_key=\"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\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm.invoke(\"how can langsmith help with testing?\")"
-=======
-    "UnstructuredMarkdownLoader(')"
->>>>>>> 803b73bf59c89a6fb428b03496f8c3a94d4388aa
-=======
-    "UnstructuredMarkdownLoader(')"
->>>>>>> 803b73bf59c89a6fb428b03496f8c3a94d4388aa
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=500, chunk_overlap=150)\n",
+    "split_docs = text_splitter.split_documents(docs)"
    ]
   }
  ],
